# tiny_android_ros

./: README.md
navi/: CMakeLists.txt
navi/include/: Astar.h  IContext.h  NaviAlgorithm.h  NaviFinish.h  NaviMoving.h  NaviRecovery.h  NaviRobot.h  NaviState.h  NaviStopped.h  Object.h  OpticalFlow.h  QuadTreeNode.cpp  QuadTreeNode.h  Robot.h  SlamController.h
navi/src/: Astar.cpp  NaviAlgorithm.cpp  NaviFinish.cpp  NaviMoving.cpp  NaviRecovery.cpp  NaviRobot.cpp  NaviState.cpp  NaviStopped.cpp  Object.cpp  OpticalFlow.cpp  Robot.cpp  SlamController.cpp
slam/: .gitignore  CMakeLists.txt
slam/Examples/Monocular/: TUM1.yaml  mono_tum.cc  mono_wmh  mono_wmh.cc
slam/include/: Frame.h  Map.h  MapDrawer.h  MapPoint.h  SlamAlgorithm.h  System.h  Viewer.h
slam/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Map.cc  MapDrawer.cc  MapPoint.cc  SlamAlgorithm.cpp  System.cc  Viewer.cc
tomatoapp/TomatoNN/: CMakeLists.txt  build.gradle
tomatoapp/TomatoNN/src/androidTest/java/com/tomato/android/tomatonn/: ExampleInstrumentedTest.java
tomatoapp/TomatoNN/src/main/: AndroidManifest.xml
tomatoapp/TomatoNN/src/main/cpp/: NnWrapper.cpp  NnWrapper.h
tomatoapp/TomatoNN/src/main/cpp/caffe2/proto/: caffe2.pb.h  caffe2_legacy.pb.cc  hsm.pb.cc  metanet.pb.cc  predictor_consts.pb.cc  prof_dag.pb.cc
tomatoapp/TomatoNN/src/main/cpp/caffe2_head/core/: macros.h
tomatoapp/TomatoNN/src/main/cpp/caffe2_head/proto/: caffe2.pb.h
tomatoapp/TomatoNN/src/main/res/values/: strings.xml
tomatoapp/TomatoNN/src/test/java/com/tomato/android/tomatonn/: ExampleUnitTest.java
tomatoapp/tomato-app/: .gitignore
tomatoapp/tomato-app/linux/: CMakeLists.txt  RobotEvent.cpp  RobotEvent.h  RobotServiceObserver.cpp  RobotServiceObserver.h  main.cpp
tomatoapp/tomato-app/linux/python/: tomato-app.py
tomatoapp/tomato-emotion/: .gitignore  CMakeLists.txt
tomatoapp/tomato-emotion/include/: Robot.h  RobotEmotionEngine.h  RobotState.h  RobotStateStop.h
tomatoapp/tomato-emotion/src/: RobotEmotionEngine.cpp  RobotStateHappy.cpp  RobotStateHungry.cpp  RobotStateStop.cpp  RobotStateTired.cpp
tomatoapp/tomato-python/include/: RobotStateHappy.h  RobotStateHungry.h  RobotStateTired.h
tomatoapp/tomato-python/src/: ServiceWrapper.cpp
